# Rakshak_cpp

./: .gitignore  CORE_FILES.md  NEXT.md  decisions.txt  notes  progress.txt
Rakshak_cpp/: CMakeLists.txt
Rakshak_cpp/data/: test.py
Rakshak_cpp/include/: CameraReader.h  DataManager.h  Globals.h  MJPEGStreamer.h  MathUtils.h  MotorController.h  OpMode.h  PIDController.h  RakshakSystem.h  SerialPort.h  SharedState.h  TriggerController.h  YoloEngine.h  ZoomController.h
Rakshak_cpp/src/: CameraReader.cpp  DataManager.cpp  MJPEGStreamer.cpp  MotorController.cpp  PIDController.cpp  RakshakSystem.cpp  SerialPort.cpp  SharedState.cpp  TriggerController.cpp  YoloEngine.cpp  ZoomController.cpp  main.cpp
Rakshak_py/: Globals.py  MQ_Base.py  camera_reader.py  data_manager.py  gear_reduction.py  get_cam_ports.sh  log_util.py  main.py  message_controller.py  modular_main_nt.py  modular_sensor_reader.py  motor_controller.py  notes.txt  op_mode.py  share_frame.py  shared_state.py  solenoid_controller.py  stream_server.py  tegrastats_reader.py  telemetry_module.py  utils.py  zoom_controller.py
Rakshak_py/LoggerModule/: __init__.py  config.yaml  file_manager.py  global_config.py  logger.py  storage.py
Rakshak_py/LoggerModule/converters/: bin_to_csv.py  tlvbin_to_csv.py
Rakshak_py/data/: fov_data_m.json  person_depth_data.json  pid_data.json  target_depth_data.json
Rakshak_py/gps_yaw/: calibrate_yaw.py  mag_500.csv  mag_500_calibrated.csv  mag_500_calibration.json  modular_reader.py  sensors_data.py  soft_hard.py  test.py
Rakshak_py/states/: runtime_state.json
Rakshak_py/trackers/: bytetrack.yaml
